@@ -1,0 +1,31 @@
+package t::boilerplate;
+
+use File::Spec::Functions qw( catdir updir );
+use FindBin               qw( $Bin );
+use lib               catdir( $Bin, updir, 'lib' ), catdir( $Bin, 'lib' );
+use strictures::defanged;
+
+use Test::Requires { version => 0.88 };
+use Module::Build;
+
+my $notes = {}; my $perl_ver;
+
+BEGIN {
+   my $builder = eval { Module::Build->current };
+      $builder and $notes = $builder->notes;
+      $perl_ver = $notes->{min_perl_version} || 5.008;
+}
+
+use Test::Requires "${perl_ver}";
+
+sub import {
+   strictures::defanged->import; return;
+}
+
+1;
+
+# Local Variables:
+# mode: perl
+# tab-width: 3
+# End:
+# vim: expandtab shiftwidth=3:
